--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
- background-image: url("../img/stockholm-sweden-winter-blur.jpg");
+ 
 
 
 }
@@ -18,6 +18,7 @@ nav {
     width: 100%;
     height: auto;
     background-color: black;
+    opacity: 50%;
 }
 
 .title-h1 {
@@ -29,5 +30,10 @@ nav {
     width: 10rem;
     height: 0.5rem;
     background-color: #f26522;
-     margin: 0 auto;
+    margin: 0 auto;
+}
+
+.page-1 {
+    background-image: url("../img/stockholm-sweden-winter-blur.jpg");
+    height: 700px;
 }
