--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
 * {
     box-sizing: border-box;
     padding: 0;
-    margin: 0;
+    margin: 0; 
 }
-
-html {
-
-}
-
 body {
- 
-
-
+    font-family: 'Roboto';
+    font-weight: 400;
 }
-
+/*Iphone 7*/
+@media(max-width: 450   px){
 nav {
     width: 100%;
     height: auto;
@@ -36,4 +32,5 @@ nav {
 .page-1 {
     background-image: url("../img/stockholm-sweden-winter-blur.jpg");
     height: 700px;
+}
 }
