--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,32 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-html {
-
-}
-
-body {
- 
-
-
-}
-
+body{}
+@media(max-width: 450px){
 .navbar {
     width: 100%;
     height: auto;
     background-color: rgba(0,0,0, 0.3);
-
-    
 }
-
-
 .navbar ul li img {
     opacity: 1 !important;   
 }
-
 .title-h1 {
     color: white;
-    font-family: "Roboto Regular";
+    font-family: "Robotor";
 }
-
 .orange {
     width: 10rem;
     height: 0.5rem;
     background-color: #f26522;
     margin: 0 auto;
 }
-
 .page-1 {
     background-image: url("../img/stockholm-sweden-winter-blur.jpg");
     height: 700px;
+}
 }
