--- a/css/main.css
+++ b/css/main.css
@@ -2,35 +2,106 @@
 * {
     box-sizing: border-box;
     padding: 0;
-    margin: 0; 
+    margin: 0;
 }
-body {
-    font-family: 'Roboto';
-    font-weight: 400;
+/*Hamburger*/
+#nav-icon{
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 0 auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
 }
-/*Iphone 7*/
-@media(max-width: 450px){
-nav {
+
+#nav-icon span{
+  display: block;
+  position: absolute;
+  margin: 0 auto;
+  height: 9px;
+  width: 100%;
+  background: #d3531a;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon span:nth-child(2),#nav-icon span:nth-child(3) {
+  top: 18px;
+}
+
+#nav-icon span:nth-child(4) {
+  top: 36px;
+}
+
+#nav-icon.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+ul li {
+    display: inline-block;
+    vertical-align: middle;
+}
+.navbar {
     width: 100%;
     height: auto;
-    background-color: black;
-    opacity: 50%;
+    background-color: rgba(0,0,0, 0.3);
 }
-
+.navbar ul li img {
+    opacity: 1 !important;   
+}
 .title-h1 {
     color: white;
-    font-family: "Roboto Regular";
+    font-family: "Robotor";
 }
-
 .orange {
     width: 10rem;
     height: 0.5rem;
     background-color: #f26522;
     margin: 0 auto;
 }
-
 .page-1 {
     background-image: url("../img/stockholm-sweden-winter-blur.jpg");
     height: 700px;
-}
 }
