--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 body{
   font-family: "Roboto";
   font-weight: 300;
+  color: black;
 }
 
 @media(max-width: 450px){
@@ -54,7 +55,7 @@ body{
 }
 
 /*Orange Dividers*/
-.orange {
+.orange-page-1 {
     width: 6rem;
     height: 0.2rem;
     background-color: #f26522;
@@ -63,7 +64,7 @@ body{
 }
 
 /*4 first buttons*/
-.btn {
+.btn-page-1 {
     padding: 6px 12px;
     border: 2px solid #b5b5b5;
     background-color: rgba(0,0,0,0.0);
@@ -72,26 +73,42 @@ body{
     text-decoration: none;
 }
 
+/*second section*/
 .page-2 {
     width: 100%;
-    background-color: gray;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .page-2-title-h1 {
-
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 3rem;
 }
 
-
-.img-container {
-    margin: 2rem 0 0 0;
-    width: 80%;
-    height: auto;
+.orange-page-2 {
+    width: 6rem;
+    height: 0.2rem;
+    background-color: #f26522;
     margin: 0 auto;
-    border: 1px solid black;
+    margin: 2rem 0 2rem 0;
 }
 
+
+.page-2-p {
+
+}
+
+.btn-page-2 {
+    padding: 8px 15px;
+    border: 2px solid #000000;
+    background-color: rgba(0,0,0,0.0);
+    margin: 1rem 0 0 0;
+    color: black;
+    text-decoration: none;
+}
 
 }
