--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ body{
 /*second section*/
 .page-2 {
     width: 100%;
+    height: 45rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -121,6 +122,7 @@ body{
     background-color: #f2f2f2;
     padding: 35px 0;
     width: 100%;
+    height: 45rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -143,7 +145,7 @@ body{
 
 .page-3-flex-container {
     width: 100%;
-    min-height: 100%;
+    min-height: 50%;
     background-color: #2ecc71;
     display: flex;
     flex-wrap: wrap;
@@ -191,7 +193,7 @@ body{
     padding: 35px 0;
     width: 100%;
     background-image: url("../img/221b.jpg");
-    height: 30rem;
+    height: 45rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -240,7 +242,7 @@ body{
 .page-5 {
     padding: 35px 0;
     width: 100%;
-    height: 35rem;
+    height: 45rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -295,6 +297,8 @@ form {
     color: white;
     background-color: #f26522;
     text-decoration: none;
+    font-family: "Roboto";
+    font-weight: 300;
 }
 
 footer {
