--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
+
+
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body{
@@ -11,18 +13,44 @@ body{
   color: black;
 }
 
-@media(max-width: 450px){
+
+@media(min-width: 320px) and (max-width: 415px) {
+.hamburger-position{
+  height: 45px;
+  width: 55px;
+  margin-right: 10px;
+}
+
+.flex-box{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items:center;
+  list-style: none;
+  padding: 0;
+  white-space: nowrap;
+  vertical-align: middle;
+}
 .navbar {
-    width: 100%;
-    height: auto;
-    background-color: rgba(0,0,0, 0.3);
+  position: relative;
+  width: 100%;
+  height: auto;
+  background-color: rgba(0,0,0, 0.3);
+}
+.navbar ul li{
+  vertical-align: middle;
 }
 .navbar ul li img {
-    opacity: 1 !important;   
+  opacity: 1 !important;   
 }
 
 .logo-img {
-    width: 40%;
+  vertical-align: middle;
+  width: 220px;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+  margin-left: 0.3em;
+  margin: 0.3em, 0em, 0.3em, 0.3em; 
 }
 
 /*h1 on page-1*/
@@ -37,10 +65,10 @@ body{
 
 /*First section */
 .page-1 {
-    width: 100%;
-    background-image: url("../img/stockholm-sweden-winter-blur.jpg");
-    height: 46rem;
-    padding: 0 0;
+  width: 100%;
+  background-image: url("../img/stockholm-sweden-winter-blur.jpg");
+  height: 46rem;
+  padding: 0 0;
 }
 
 .page-1-div {
@@ -82,6 +110,9 @@ body{
     flex-direction: column;
     align-items: center;
     padding: 35px 0;
+}
+.page-2 img {
+  width: 100%;
 }
 
 .page-2-title-h1 {
@@ -330,7 +361,8 @@ footer h2 {
 
 /*Hamburger*/
 #nav-icon{
-  width: 60px;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  width: 55px;
   height: 45px;
   position: relative;
   margin: 0 auto;
