--- a/css/main.css
+++ b/css/main.css
@@ -447,26 +447,32 @@ footer h2 {
   left: 50%;
 }
 
+/* Css för drop down menyn mobil (box, active och menuDropdown) */
+.menuDropdownUL{
+  display:flex;
+  padding-top:1.6rem;
+  align-items:center;
+  flex-direction: column;
+}
+.menuDropdown{
+  list-style:none;
+  color:white;
+  padding-bottom:1.5rem;
+}
 .box{
   opacity:1;
-  background:red;
-  border: 2px solid black;
   width:100%;
   height:260px;
   transform:translate(0px,0px);
   transition:all 1s ease 0s;  
 }
 
-
-
 .active{
   
   opacity:1;
-  background:aqua;
-  border: 2px solid black;
   width:0px;
   height:0px;
-  transition:all 1s ease 0s;
-  transform:translate(-500px,0px);
+  transition:all 1.5s ease 0s;
+  transform:translate(-900px,0px);
   }
 
