--- a/css/main.css
+++ b/css/main.css
@@ -480,3 +480,8 @@ footer h2 {
   height:1.5rem;
   margin:0.5rem;
 }
+
+/*Class for the links in the nav on the other two html files*/
+.other-site-nav {
+  text-decoration: none;
+}
