fixed logo link

--- a/views/projects.html
+++ b/views/projects.html
@@ -13,7 +13,7 @@
 	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
-				<a href="index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png"></a>
+				<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png"></a>
 			</li>
 			<li class="hamburger-position" align="right">
 				<div id="nav-icon" align="right" onclick="buttonpress()">
