--- a/css/main.css
+++ b/css/main.css
@@ -322,15 +322,17 @@ form {
 .contact {
     width: 80%;
     height: 2rem;
-    border: 2.5px solid #242424;
+    border: 1px solid #242424;
     margin: 0 0 2rem 0;
+    padding-left:5px;
 
 }
 
 .txt-style {
     width: 80%;
     height: 200px;
-    border: 2px solid #242424;
+    border: 1px solid #242424;
+    padding-left:5px;
 }
 
 .btn-page-5 {
