--- a/css/main.css
+++ b/css/main.css
@@ -330,7 +330,10 @@ form {
 
 .txt-style {
     width: 80%;
-    height: 200px;
+    max-width: 80%;
+    height:200px;
+    max-height: 200px;
+
     border: 1px solid #242424;
     padding-left:5px;
 }
