Förslag på TEAM sidan, orange streck centrerat genom <center>, löser detta om vi vill ha kvar

--- a/views/team.html
+++ b/views/team.html
@@ -40,7 +40,9 @@
 			</ul>
 		</div>
 	</nav>
-
+<br><br>
+<h1 class="page-2-title-h1" >XLNT´s Team</h1> 
+<center><div class="orange-page-1"></div></center><br><br>
 <div class="slideshow-container">
 	<div class="mySlides fade">
 		
@@ -79,12 +81,18 @@
 </div>
 <div class="textContainer">
 	<ul class="textList">
-		<li><div class="myTextSlide"> <p> Oscar Gren <br> VD <br> Bäst på allt, anställde de andra för att jag bryr mig om människor. </p> </div></li>
+		<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> Bäst på allt, anställde de andra för att jag bryr mig om människor. lorem ipsum ipsom baconium sipruminum.lorem ipsum ipsom baconium sipruminum.lorem ipsum ipsom baconium sipruminum. anställde de andra för att jag bryr mig om människor.</p> <br><br>
+        <h5> Kompetenser </h5>
+        <img class="kompIcon" src="../../icons/icons/HTML.png"> <img class="kompIcon" src="../../icons/icons/css.png"> <img class="kompIcon" src="../../icons/icons/js.png">
+
+		</div></li>
 		<li><div class="myTextSlide"> <p> Emil Fjellström <br> CTO <br> 1-6-8-3-POTATOE </p> </div></li>
 		<li><div class="myTextSlide"> <p> Eddie Jostell <br> Praktikant <br> Praktikant på heltid, jätteduktig. </p> </div></li>
 		<li><div class="myTextSlide"> <p> Martin Blomgren <br> Städare <br> När man har Martin med på skeppet så behöver man inte oroa sig för att toalettpappret är slut, en riktig rockstjärna när det kommer till städning. </p> </div></li>
 	</ul>
 </div>
+
+<br><br>
 <footer>
 			<h2>Adress</h2>
 			<p>Sjumilaskogen 7</p>
