--- a/views/team.html
+++ b/views/team.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/hamburger.css">
+	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 </head>
 <body>
 <nav class="navbar">
