--- a/views/team.html
+++ b/views/team.html
@@ -85,7 +85,7 @@
 	<ul class="textList">
 		<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> Bäst på allt, anställde de andra för att jag bryr mig om människor. lorem ipsum ipsom baconium sipruminum.lorem ipsum ipsom baconium sipruminum.lorem ipsum ipsom baconium sipruminum. anställde de andra för att jag bryr mig om människor.</p> <br><br>
         <h5> Kompetenser </h5>
-        <img class="kompIcon" src="../../icons/icons/HTML.png"> <img class="kompIcon" src="../../icons/icons/css.png"> <img class="kompIcon" src="../../icons/icons/js.png">
+        <img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png">
 
 		</div></li>
 		<li><div class="myTextSlide"> <p> Emil Fjellström <br> CTO <br> 1-6-8-3-POTATOE </p> </div></li>
