Added icons and text teamsite

--- a/views/team.html
+++ b/views/team.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 </head>
 <body>
-<nav class="navbar">
+	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
 				<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png"></a>
@@ -42,71 +42,82 @@
 			</ul>
 		</div>
 	</nav>
-<br><br>
-<h1 class="page-2-title-h1" >XLNT´s Team</h1> 
-<center><div class="orange-page-1"></div></center><br><br>
-<div class="slideshow-container">
-	<div class="mySlides fade">
-		
-		<img src="../img/oscar.png" style="width:100%">
-		<div class="text"></div>
+	<br><br>
+	<h1 class="page-2-title-h1" >XLNT´s Team</h1> 
+	<center><div class="orange-page-1"></div></center><br><br>
+	<div class="slideshow-container">
+		<div class="mySlides fade">
+
+			<img src="../img/oscar.png" style="width:100%">
+			<div class="text"></div>
+		</div>
+
+		<div class="mySlides fade">
+
+			<img src="../img/emil.png" style="width:100%">
+			<div class="text"></div>
+		</div>
+
+		<div class="mySlides fade">
+
+			<img src="../img/eddie.png" style="width:100%">
+			<div class="text"></div>
+		</div>
+
+		<div class="mySlides fade">
+
+			<img src="../img/martin.png" style="width:100%">
+			<div class="text"></div>
+		</div>
+
+		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1)">&#10095;</a>
+	</div>
+	<br>
+
+	<div style="text-align:center">
+		<span class="dot" onclick="currentSlide(1)"></span> 
+		<span class="dot" onclick="currentSlide(2)"></span> 
+		<span class="dot" onclick="currentSlide(3)"></span> 
+		<span class="dot" onclick="currentSlide(4)"></span> 
+	</div>
+	<div class="textContainer">
+		<ul class="textList">
+			<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella.</p> <br><br>
+				<h5> Kompetenser </h5>
+				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png">
+			</div></li>
+
+			<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>CTO</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+				<h5>Kompetenser</h5>
+				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/php.png">
+			</div></li>
+
+			<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Praktikant</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+				<h5> Kompetenser </h5>
+				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/ai.png"><img class="kompIcon" src="../img/icons/ap.png">
+			</div></li>
+
+			<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5> Städare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
+				<h5> Kompetenser </h5>
+				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/vr.png">
+			</div></li>
+		</ul>
 	</div>
 
-	<div class="mySlides fade">
-		
-		<img src="../img/emil.png" style="width:100%">
-		<div class="text"></div>
-	</div>
+	<br><br>
+	<footer>
+		<h2>Adress</h2>
+		<p>Sjumilaskogen 7</p>
+		<p>1337 - Stockholm</p>
+		<h2>Följ oss</h2>
+		<a href="#"><i class="fa fa-facebook-square icon-size" aria-hidden="true"></i></a>
+		<a href="#"><i class="fa fa-twitter-square icon-size" aria-hidden="true"></i></a>
+		<a href="#"><i class="fa fa-linkedin icon-size"></i></a>
 
-	<div class="mySlides fade">
-		
-		<img src="../img/eddie.png" style="width:100%">
-		<div class="text"></div>
-	</div>
-
-	<div class="mySlides fade">
-		
-		<img src="../img/martin.png" style="width:100%">
-		<div class="text"></div>
-	</div>
-
-	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-	<a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<div style="text-align:center">
-	<span class="dot" onclick="currentSlide(1)"></span> 
-	<span class="dot" onclick="currentSlide(2)"></span> 
-	<span class="dot" onclick="currentSlide(3)"></span> 
-	<span class="dot" onclick="currentSlide(4)"></span> 
-</div>
-<div class="textContainer">
-	<ul class="textList">
-		<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> Bäst på allt, anställde de andra för att jag bryr mig om människor. lorem ipsum ipsom baconium sipruminum.lorem ipsum ipsom baconium sipruminum.lorem ipsum ipsom baconium sipruminum. anställde de andra för att jag bryr mig om människor.</p> <br><br>
-        <h5> Kompetenser </h5>
-        <img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png">
-
-		</div></li>
-		<li><div class="myTextSlide"> <p> Emil Fjellström <br> CTO <br> 1-6-8-3-POTATOE </p> </div></li>
-		<li><div class="myTextSlide"> <p> Eddie Jostell <br> Praktikant <br> Praktikant på heltid, jätteduktig. </p> </div></li>
-		<li><div class="myTextSlide"> <p> Martin Blomgren <br> Städare <br> När man har Martin med på skeppet så behöver man inte oroa sig för att toalettpappret är slut, en riktig rockstjärna när det kommer till städning. </p> </div></li>
-	</ul>
-</div>
-
-<br><br>
-<footer>
-			<h2>Adress</h2>
-			<p>Sjumilaskogen 7</p>
-			<p>1337 - Stockholm</p>
-			<h2>Följ oss</h2>
-			<a href="#"><i class="fa fa-facebook-square icon-size" aria-hidden="true"></i></a>
-			<a href="#"><i class="fa fa-twitter-square icon-size" aria-hidden="true"></i></a>
-			<a href="#"><i class="fa fa-linkedin icon-size"></i></a>
-
-		</footer>
-<script type="text/javascript" src="../js/main.js"></script>
-<script src="https://use.fontawesome.com/656255a524.js"></script>
-<script type="text/javascript" src="../js/team.js"></script>
+	</footer>
+	<script type="text/javascript" src="../js/main.js"></script>
+	<script src="https://use.fontawesome.com/656255a524.js"></script>
+	<script type="text/javascript" src="../js/team.js"></script>
 </body>
 </html>
