small text changes

--- a/views/team.html
+++ b/views/team.html
@@ -88,17 +88,17 @@
 				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png">
 			</div></li>
 
-			<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>CTO</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+			<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>Utvecklare</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 				<h5>Kompetenser</h5>
-				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/php.png">
+				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/php.png">
 			</div></li>
 
-			<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Praktikant</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+			<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Utvecklare/Designer</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 				<h5> Kompetenser </h5>
 				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/ai.png"><img class="kompIcon" src="../img/icons/ap.png">
 			</div></li>
 
-			<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5> Städare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
+			<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5>Utvecklare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
 				<h5> Kompetenser </h5>
 				<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/vr.png">
 			</div></li>
