--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,10 @@
 @media(min-width: 320px) and (max-width: 415px) {
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+	
 .navbar {
   position: fixed;
   z-index:99;
@@ -12,4 +18,59 @@
 .navbar ul li img {
   opacity: 1 !important;   
 }
+
+.menuDropdownUL{
+  display:flex;
+  padding-top:1.6rem;
+  align-items:center;
+  flex-direction: column;
+}
+.menuDropdown{
+  list-style:none;
+  color:white;
+  padding-bottom:1.5rem;
+}
+.box{
+  opacity:1;
+  width:100%;
+  height:260px;
+  transform:translate(0px,0px);
+  transition:all 1s ease 0s;  
+}
+.active{
+  opacity:1;
+  width:0px;
+  height:0px;
+  transition:all 1.5s ease 0s;
+  transform:translate(-900px,0px);
+  }
+.menuscroll{
+  height:1.5rem;
+  margin:0.5rem;
+}
+
+.logo-img {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  vertical-align: middle;
+  width: 130px;
+  margin: 0.3em 0em 0.3em 0.3em; 
+}
+
+.flex-box{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items:center;
+  list-style: none;
+  padding: 0;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+
+
 }
