--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ body{
 }
 .page-2 img {
   width: 100%;
+  padding: 0 1em;
 }
 .page-2-title-h1 {
     font-family: "Roboto";
@@ -100,6 +101,7 @@ body{
     font-size: 1.5rem;
     text-align: center;
     margin-top: 3rem;
+    padding: 0 1em;
 }
 .orange-page-2 {
     width: 6rem;
