new text on respo.html

--- a/views/responsive.html
+++ b/views/responsive.html
@@ -48,15 +48,13 @@
 		</div>
 	</nav>
 	<section class="page-2">
-		<h1 class="page-2-title-h1" >EDDIE IS THE BEST AROUND!</h1>
+		<h1 class="page-2-title-h1">XLNT Media skapar lösningar för alla format</h1>
 		<div class="orange-page-2"></div>
 		<img src="../img/responsive-phone.png">
 		<p class="page-2-p">
-			Vi fixar webplater för alla dina enheter 
-			med en smidig responsiv design 
-			för att få maxial upplevelse på din hemsida. 
+			"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
 		</p>
-		<a href="#" class="btn-page-2">Läs mer</a>
+		<!-- <a href="#" class="btn-page-2">Läs mer</a> -->
 	</section>
 	<footer>
 		<h2>Adress</h2>
