--- a/css/navbar.css
+++ b/css/navbar.css
@@ -27,7 +27,20 @@
   padding-top:1.6rem;
   align-items:center;
   flex-direction: column;
+  animation-name:fadeMenu;
+  animation-duration: 1000;
+  animation-delay: 5000;
 }
+
+@keyframes fadeMenu{
+  from:{
+    opacity:0
+  }
+  to:{
+    opacity:1
+  }
+}
+
 .menuDropdown{
   list-style:none;
   color:white;
@@ -39,6 +52,7 @@
   height:260px;
   transform:translate(0px,0px);
   transition:all 1s ease 0s;  
+
 }
 .active{
   opacity:1;
@@ -46,6 +60,8 @@
   height:0px;
   transition:all 1.5s ease 0s;
   transform:translate(-900px,0px);
+  animation-name:fadeMenu;
+  animation-duration: 5000;
   }
 .menuscroll{
   height:1.5rem;
