--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,7 +8,6 @@
 }
 
 .navbar {
-  left: 15%;
   position: fixed;
   z-index:99;
   width: 100%;
@@ -94,5 +93,10 @@
 /*Class to hide underscores on responsive.html and projects.html*/
 .other-site-nav {
   text-decoration: none;
+}
+@media(min-width: 1366px){
+  .navbar{
+    left: 15%;
+  }
 }
 
