--- a/css/footer.css
+++ b/css/footer.css
@@ -28,3 +28,9 @@ footer h2 {
     font-size: 90px;
     margin: 1rem 0 0 2rem;
 }
+@media(min-width: 1366px){
+    footer{
+        margin: 0 auto;
+        width:70%;
+    }
+}
