--- a/css/main.css
+++ b/css/main.css
@@ -423,6 +423,7 @@ li{
   section {
     margin: 0 auto;
     width: 70% !important;
+    background-color: #fafafa;
   }
   nav{
     margin: 0 auto;
