--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,7 +6,7 @@
   padding: 0;
   margin: 0;
 }
-
+/*Navbar*/
 .navbar {
   position: fixed;
   z-index:99;
@@ -67,6 +67,17 @@
   margin:0.5rem;
 }
 
+.flex-box{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items:center;
+  list-style: none;
+  padding: 0;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+
 .logo-img {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -79,16 +90,7 @@
   margin: 0.3em 0em 0.3em 0.3em; 
 }
 
-.flex-box{
-  display: flex;
-  flex-direction: row;
-  justify-content:space-between;
-  align-items:center;
-  list-style: none;
-  padding: 0;
-  white-space: nowrap;
-  vertical-align: middle;
-}
+
 
 /*Class to hide underscores on responsive.html and projects.html*/
 .other-site-nav {
@@ -98,5 +100,89 @@
   .navbar{
     left: 15%;
   }
+}
+
+/*Navbar end*/
+
+
+/*Hamburger*/
+#nav-icon{
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  width: 45px;
+  height: 45px;
+  position: relative;
+  margin: 0 auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon span{
+  display: block;
+  position: absolute;
+  margin: 0 auto;
+  height: 5px;
+  width: 100%;
+  background: #f26522;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon span:nth-child(2),#nav-icon span:nth-child(3) {
+  top: 12px;
+}
+
+#nav-icon span:nth-child(4) {
+  top: 24px;
+}
+
+#nav-icon.open span:nth-child(1) {
+  top: 12px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+.hamburger-position{
+  height: 28px;
+  width: 55px;
+  margin-right: 10px;
 }
 
