--- a/css/main.css
+++ b/css/main.css
@@ -362,6 +362,8 @@ li{
 .textContainer{
   padding: 1.5rem;
 }
+
+/*Desktop media query*/
 @media (min-width:1366px){
   section {
     margin: 0 auto;
@@ -381,6 +383,7 @@ li{
     width: 65%;
   }
 
+/*iPad media query*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  
 { 
   /* STYLES GO HERE */
