--- a/css/main.css
+++ b/css/main.css
@@ -383,6 +383,12 @@ li{
     width: auto;
     height: auto;
   }
+  .textContainer{
+    margin: 0 auto;
+    width: 70% !important;
+    background-color: #fafafa;
+
+  }
 
 /*iPad media query*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  
