--- a/css/main.css
+++ b/css/main.css
@@ -397,7 +397,10 @@ li{
     height: 60rem;
   }
   .page-2-title-h1{
-    margin-top: 6rem;
+    margin-top: 5rem;
+  }
+  .page-2-p{
+    margin: 5rem 0 3rem 0;
   }
   .orange-page-2{
     margin: 5rem 0 5rem 0;
